add actual api paths
